fix last image leaves gap on mobil

--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -595,7 +595,7 @@ a.carousel-control.right:hover {
   #project-page .project-col {
     margin-top: -30px;
   }
-  .projects-container a:last-child .project-col {
+  .projects-container a:last-child .project-col,.projects-container a:last-child .category-col {
     margin-bottom: 0px;
   }
   /*#work-page .projects-container,#lab-page .projects-container {
